fixed hero height on mobile

--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -108,6 +108,7 @@ span.animate-if.ng-scope {
   }
   #hero-style {
    padding:40px;
+   height:100%;
   }
   #nav {
     display: none;
